Passes R CMD check

--- a/menura.Rcheck/menura/html/00Index.html
+++ b/menura.Rcheck/menura/html/00Index.html
@@ -25,8 +25,8 @@
 <tr><td style="width: 25%;"><a href="fit_model.html">fit_model.default</a></td>
 <td>Bayesian Estimator of Parameters of Univariate Diffusion Models for Continuous Trait Evolution</td></tr>
 <tr><td style="width: 25%;"><a href="phylo_sde.html">phylo_sde</a></td>
-<td>Simulate a CIR Diffusion Process in the Tree of Life</td></tr>
+<td>Simulate a CIR Diffusion Process on Phylogenies</td></tr>
 <tr><td style="width: 25%;"><a href="tree_logL.html">tree_logL</a></td>
-<td>Calculates the Log Likelihood of the Diffusion Process in a Tree of Life</td></tr>
+<td>Calculates the Log Likelihood of the Diffusion Process on a Phylogeny</td></tr>
 </table>
 </body></html>
