--- a/menura.Rcheck/menura/html/00Index.html
+++ b/menura.Rcheck/menura/html/00Index.html
@@ -11,7 +11,7 @@
 <div style="text-align: center;">
 <a href="../../../doc/html/packages.html"><img class="arrow" src="../../../doc/html/left.jpg" alt="[Up]" /></a>
 <a href="../../../doc/html/index.html"><img class="arrow" src="../../../doc/html/up.jpg" alt="[Top]" /></a>
-</div><h2>Documentation for package &lsquo;menura&rsquo; version 0.4.2</h2>
+</div><h2>Documentation for package &lsquo;menura&rsquo; version 0.4.4</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 <li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
@@ -22,12 +22,12 @@
 
 <table width="100%">
 <tr><td style="width: 25%;"><a href="fit_model.html">fit_model</a></td>
-<td>Bayesian Estimator of Parameters of Univariate Diffusion Models for Continuous Trait Evolution</td></tr>
-<tr><td style="width: 25%;"><a href="fit_model.html">fit_model.default</a></td>
-<td>Bayesian Estimator of Parameters of Univariate Diffusion Models for Continuous Trait Evolution</td></tr>
+<td>fit_model</td></tr>
+<tr><td style="width: 25%;"><a href="fossil_id.html">fossil_id</a></td>
+<td>fossil_id</td></tr>
 <tr><td style="width: 25%;"><a href="phylo_sde.html">phylo_sde</a></td>
-<td>Simulate a CIR Diffusion Process on Phylogenies</td></tr>
+<td>phylo_sde</td></tr>
 <tr><td style="width: 25%;"><a href="tree_logL.html">tree_logL</a></td>
-<td>Calculates the Log Likelihood of the Diffusion Process on a Phylogeny</td></tr>
+<td>tree_logL</td></tr>
 </table>
 </body></html>
